"fixed some layout issue and added readme file"

--- a/app/app.css
+++ b/app/app.css
@@ -57,7 +57,7 @@ form {
     @apply bg-gradient-to-b from-light-blue-100 to-light-blue-200 p-4 rounded-2xl;
   }
   .primary-button {
-    @apply primary-gradient text-white rounded-full px-4 py-2 cursor-pointer w-full;
+    @apply bg-gradient-to-r from-[#e66b9c] to-[#3141ef] text-white rounded-2xl px-4 py-2 cursor-pointer w-full;
   }
   .resume-nav {
     @apply flex flex-row justify-between items-center p-4 border-b border-gray-200;
@@ -97,7 +97,7 @@ form {
   }
 
   .navbar {
-    @apply flex flex-row justify-between items-center bg-white rounded-full p-4 w-full px-10 max-w-[1200px] mx-auto;
+    @apply flex flex-row justify-between items-center bg-white rounded-2xl p-4 w-[90%] lg:w-full px-10 max-w-[1200px] mx-auto;
   }
 
   .score-badge {
